<resources>
    <string name="app_name">ToDo</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="button_back_text">BotónParaRetroceder</string>
    <string name="my_image_description">ImagenIconoP</string>
    <string name="enter_name_hint">Email</string>
    <string name="enter_contraseñap_hint">Password</string>
    <string name="enter_login1">LOGIN</string>
    <string name="not_account1">You do not have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot your Password?</string>
    <string name="or_p">Or</string>
    <string name="button_login_facebook">LOGIN WITH FACEBOOK</string>
    <string name="sign_facebook">Sign In With Facebook</string>
    <string name="sign_Google">Sign In With Google</string>
    <string name="button_login_google">LOGIN WITH GOOGLE</string>
    <string name="continue_name">Continue as Name</string>
    <string name="loginapp_profile">LoginApp will receive your public profile</string>
    <string name="learn_more">Learn More</string>
    <string name="continue_facebook">Continue</string>
    <string name="do_facebook">This doesn\'t let the app post to Facebook</string>
    <string name="conex_facebook">Conexion Facebook</string>
    <string name="candado_facebook">Candado Facebook</string>
    <string name="sign_google_account">Sign in with your Google Account</string>
    <string name="google_help">Need Help?</string>
    <string name="enter_email">Email</string>
    <string name="enter_username">Username</string>
    <string name="image_user_anonimo">User Anonimo Image</string>
    <string name="enter_send1">SEND</string>
    <string name="button_continue">CONTINUE</string>
    <string name="enter_repeat_password">Repeat Password</string>
    <string name="enter_current_password">Current Password</string>
    <string name="enter_new_password">New Password</string>
    <string name="enter_confirm_password">Confirm Password</string>
    <string name="change_username_ToDo">Change Username</string>
    <string name="change_email_ToDo">Change Email</string>
    <string name="change_password_ToDo">Change Password</string>
    <string name="recover_password_ToDo">Recover Password</string>
    <string name="btnLogout">Logout</string>
    <string name="txtUsername">Brendan Moore</string>
    <string name="txtEmailHidden">****************@*****.com</string>
    <string name="txtPasswordHidden">*************</string>
    <string name="txtTitleTasks">Entry Title Tasks</string>
    <string name="txtDescriptionTasks">Description Tasks</string>
    <string name="txtAddTask">Add Tasks</string>
    <string name="txtCancel">Cancel</string>
    <string name="txtTitleList">Entry Title List</string>
    <string name="txtAddList">Add List</string>
    <string name="txtTitle_home">Home</string>
    <string name="btnProfile">&#183;&#183;&#183;</string>
    <string name="txtTasks">Tasks</string>
    <string name="txtLists">Lists</string>
    <string name="txtCalendar">Calendar</string>
    <string name="txtTeams">Teams</string>
    <string name="txtTasks1">Today</string>
    <string name="cbxTasks1">Advance the proyect</string>
    <string name="cbxTasks2">Deliver proyect</string>
    <string name="txtTasks2">Tomorrow</string>
    <string name="txtTasks3">Week</string>
    <string name="txtTasks4">Month</string>
    <string name="btnSearch">Search</string>
    <string name="txtLists1">Shooping</string>
    <string name="cbxLists1">Rice</string>
    <string name="cbxLists2">Meat</string>
    <string name="txtLists2">Homeworks</string>
    <string name="txtLists3">Medicines</string>
    <string name="txtLists4">Movies</string>
    <string name="txtTeams1">Pending tasks</string>
    <string name="cbxTeams1">Make the mockup</string>
    <string name="cbxTeams2">Finish graphical interface</string>
    <string name="txtTeams2">In progress</string>
    <string name="txtTeams3">Done</string>
    <string name="txtCalendar1">Today, Wednesday, March 1st</string>
    <string name="txtHour1">02:00 PM</string>
    <string name="cbxCalendar1">Go to bank</string>
    <string name="txtHour2">08:00 PM</string>
    <string name="cbxCalendar2">Make dinner</string>
    <string name="txtCalendar2">Tomorrow, Thursday, March 2nd</string>
    <string name="txtCalendar3">Monday, March 3rd</string>
    <string name="txtHour3">11:00 AM</string>
    <string name="cbxCalendar3">Do the shopping</string>
    <string name="txtHour4">03:00 PM</string>
    <string name="cbxCalendar4">Make the report</string>
    <string name="txtHour5">05:00 PM</string>
    <string name="txtCalendar4">Work meeting</string>
    <string name="txtCalendar5">Project progress</string>
    <string name="txtCalendar6">Wednesday, March 8th</string>
    <string name="txtHour6">04:00 PM</string>
    <string name="txtCalendar7">Women\'s Day</string>
    <string name="txtCalendar8">Sunday, March 24th</string>
    <string name="txtCalendar9">Conference</string>
    <string name="txtCalendar10">Presentation</string>
    <string name="txtCalendar11">Tuesday, March 26th</string>
    <string name="btnAdd">&#43;</string>
    <string name="edTxtDpDate">Select Task due date</string>


    <string name="facebook_app_id">253252393960740</string>
    <string name="fb_login_protocol_scheme">fb1aee59213afcd52a1565c01b9e283a29</string>
    <string name="facebook_client_token">7e47cd7921ac947200fb2fbe70e39f52</string>

</resources>