<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:id="@+id/top_barra"
        android:layout_width="411dp"
        android:layout_height="39dp"
        android:background="#51E4FF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/retroceder"
        android:layout_width="53dp"
        android:layout_height="44dp"
        android:layout_marginEnd="358dp"
        android:layout_marginBottom="687dp"
        android:backgroundTint="#51E4FF"
        android:contentDescription="@string/button_back_text"
        android:text="@string/button_back_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="?attr/homeAsUpIndicator" />

    <ImageView
        android:id="@+id/iconop"
        android:layout_width="281dp"
        android:layout_height="168dp"
        android:layout_marginStart="63dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="63dp"
        android:layout_marginBottom="506dp"
        android:contentDescription="@string/my_image_description"
        android:src="@drawable/iconop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/username2"
        android:layout_width="318dp"
        android:layout_height="50dp"
        android:autofillHints="name user"
        android:hint="@string/enter_username"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/top_barra"
        app:layout_constraintVertical_bias="0.343" />

    <EditText
        android:id="@+id/email2"
        android:layout_width="318dp"
        android:layout_height="50dp"
        android:layout_marginBottom="388dp"
        android:autofillHints="name user"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/top_barra"
        app:layout_constraintVertical_bias="0.983" />

    <EditText
        android:id="@+id/password_ToDo_2"
        android:layout_width="318dp"
        android:layout_height="50dp"
        android:autofillHints="name user"
        android:hint="@string/enter_contraseñap_hint"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <EditText
        android:id="@+id/repeat_password"
        android:layout_width="318dp"
        android:layout_height="50dp"
        android:autofillHints="name user"
        android:hint="@string/enter_repeat_password"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.572" />

    <Button
        android:id="@+id/login1"
        android:layout_width="315dp"
        android:layout_height="58dp"
        android:backgroundTint="#51E4FF"
        android:text="@string/enter_login1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.671" />

    <TextView
        android:id="@+id/orp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or_p"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/top_barra"
        app:layout_constraintVertical_bias="0.734" />

    <Button
        android:id="@+id/login_facebook"
        android:layout_width="312dp"
        android:layout_height="62dp"
        android:backgroundTint="#3B5998"
        android:text="@string/button_login_facebook"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.83" />

    <Button
        android:id="@+id/login_google"
        android:layout_width="312dp"
        android:layout_height="60dp"
        android:backgroundTint="#DB4A39"
        android:text="@string/button_login_google"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.916" />

</androidx.constraintlayout.widget.ConstraintLayout>