<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:id="@+id/top_barra"
        android:layout_width="411dp"
        android:layout_height="39dp"
        android:background="@color/md_indigo_800"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_p_facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_login_facebook"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/top_barra"
        app:layout_constraintVertical_bias="0.012" />

    <ImageButton
        android:id="@+id/retroceder"
        android:layout_width="53dp"
        android:layout_height="44dp"
        android:layout_marginEnd="358dp"
        android:layout_marginBottom="687dp"
        android:backgroundTint="@color/md_indigo_800"
        android:contentDescription="@string/button_back_text"
        android:text="@string/button_back_text"
        app:tint="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="?attr/homeAsUpIndicator" />

    <ImageView
        android:id="@+id/conexionFacebook"
        android:layout_width="164dp"
        android:layout_height="113dp"
        android:contentDescription="@string/conex_facebook"
        android:src="@drawable/conexion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.255" />


    <TextView
        android:id="@+id/continueName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continue_name"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/top_barra"
        app:layout_constraintVertical_bias="0.425" />

    <TextView
        android:id="@+id/loginAppFacebook"
        android:layout_width="144dp"
        android:layout_height="69dp"
        android:maxLines="2"
        android:ellipsize="end"
        android:gravity="center"
        android:text="@string/loginapp_profile"
        android:textColor="@color/md_grey_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/top_barra"
        app:layout_constraintVertical_bias="0.539" />

    <TextView
        android:id="@+id/learnMore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/learn_more"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.544"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/top_barra"
        app:layout_constraintVertical_bias="0.633" />

    <ImageView
        android:id="@+id/leanr_image"
        android:layout_width="24dp"
        android:layout_height="19dp"
        android:contentDescription="@string/learn_more"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.377"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.634"
        app:srcCompat="@drawable/learn" />

    <Button
        android:id="@+id/continue_facebook"
        android:layout_width="240dp"
        android:layout_height="56dp"
        android:backgroundTint="@color/md_indigo_800"
        android:text="@string/continue_facebook"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.778" />

    <TextView
        android:id="@+id/does_facebook"
        android:layout_width="241dp"
        android:layout_height="21dp"
        android:text="@string/do_facebook"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.682"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/top_barra"
        app:layout_constraintVertical_bias="0.877" />

    <ImageView
        android:id="@+id/candadoFacebook"
        android:layout_width="29dp"
        android:layout_height="20dp"
        android:contentDescription="@string/candado_facebook"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.206"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.877"
        app:srcCompat="@android:drawable/ic_lock_lock"
        app:tint="@android:color/black" />

</androidx.constraintlayout.widget.ConstraintLayout>